# vibrdrome-android

./: .gitignore  ANDROID-PORT-PLAN.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FEATURE-ROADMAP.md  LICENSE  PLAY-STORE-SUBMISSION.md  README.md  SECURITY.md  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adi-registration.properties
app/src/main/assets/presets/: Aderrasi - Ashes of Air.milk  Aderrasi - Crystal Ball.milk  Geiss - Cosmic Bloom.milk  Geiss - Ocean Drive.milk  Geiss - Spiral Galaxy.milk  Geiss - Tokamak.milk  Rovastar - Fractopia.milk  Rovastar - Harlequins Maze.milk  Rovastar - Sunflower.milk  Zylot - Neon Tunnel.milk  Zylot - Wavefront Collapse.milk  vibrdrome_kaleidoscope.milk  vibrdrome_plasma.milk  vibrdrome_tunnel.milk
app/src/main/cpp/: CMakeLists.txt  projectm_jni.cpp
app/src/main/cpp/projectM-4/: projectM_export.h  version.h
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: widget_now_playing.xml  widget_preview.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v31/: colors.xml
app/src/main/res/xml/: network_security_config.xml  now_playing_widget_info.xml  shortcuts.xml
gradle/: libs.versions.toml
(+95 files in other folders)
